# MyTheme

./: pyproject.toml
src/mytheme/: __init__.py
