[project]
name = "mytheme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ka Lok Leung", email = "rkleu046@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
